# fastapi_ddd_chat

./: .env_template  Dockerfile  Makefile  pyproject.toml
app/: kafka_test_consumer.py  kafka_test_producer.py
app/application/api/: main.py  schemas.py
app/application/api/messages/: filters.py  handlers.py  lifespan.py  schemas.py
app/application/api/messages/websockets/: messages.py
app/application/api/websockets/: websockets.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  message.py
app/infrastructure/message_brokers/: base.py  converters.py  kafka.py
app/infrastructure/repositories/: messages.py
app/infrastructure/repositories/filters/: base.py
app/infrastructure/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: dependency.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixture.py
app/tests/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  storages.yaml
