[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "woodoo2x2",email = "woodoo2x2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "faker (>=35.2.0,<36.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "punq (>=0.7.0,<0.8.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
